--- a/template/index.html
+++ b/template/index.html
@@ -4,7 +4,7 @@
 		<meta charset=UTF-8>
 		<meta name=viewport content="width=device-width, initial-scale=1.0">
 		<meta property=og:type content=website>
-		<meta property=og:title content="EEWBot InviteLink">
+		<meta property=og:title content="EEWBot Support">
 		<meta property=og:site_name content=EEWBot>
 		<meta property=og:image content=https://support.eewbot.net/imgs/ogp.png?RESOURCES_VERSION>
 		<meta name=twitter:card content=summary_large_image>
